--- a/conf/httpdispacher.toml
+++ b/conf/httpdispacher.toml
@@ -4,6 +4,8 @@ bind = "0.0.0.0:8080"
 domains = ["api.weibo.cn.","weibo.cn.","taobao.com.","www.baidu.com."]
 #bool
 mysql_enable = true
+#string
+ipdb_path = "/Users/chunsheng/Dropbox/Work/Sina/08.Projects/16.httpDispacher/data/ip.db.db"
 
 [mysql]
 #string
