--- a/conf/httpdispacher.toml
+++ b/conf/httpdispacher.toml
@@ -3,12 +3,14 @@ bind = "0.0.0.0:8080"
 #string array
 domains = ["api.weibo.cn.","weibo.cn.","taobao.com.","www.baidu.com.","www.taobao.com."]
 #bool
-mysql_enable = true
+mysql_enable = false
 #string
 ipdb_path = "/Users/chunsheng/Dropbox/Work/Sina/08.Projects/16.httpDispacher/data/ip.db.db"
-server_log= "./httpdispacher.server.log"
+server_log = "./httpdispacher.server.log"
 query_log = "./httpdispacher.query.log"
-log_level = "DEBUG"
+querylog_format = "%{time:2006-01-02T15:04:05} %{shortfile}|%{shortfunc} %{level:.4s} %{id:03x}%{message}"
+serverlog_format = "%{time:2006-01-02T15:04:05} %{shortfile}|%{shortfunc} %{level:.4s} %{id:03x}%{message}"
+log_level = "INFO"
 
 [mysql]
 #string
