resolve conflit of .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
 
-.idea/
+.idea/*
 httpDispatcher.iml
 src/httpDispatcher
 src/httpdispacher.query.log
