change configuration file

--- a/conf/httpdispatcher.toml
+++ b/conf/httpdispatcher.toml
@@ -1,14 +1,14 @@
 #string
-bind = "0.0.0.0:8081"
+bind = "127.0.0.1:8085"
 #string array
-domains = ["api.mgtv.com","api.weibo.cn.","weibo.cn.","taobao.com.","www.baidu.com.","www.taobao.com."]
+domains = ["interface.hifuntv.com","api.mgtv.com","api.weibo.cn.","weibo.cn.","taobao.com.","www.baidu.com.","www.taobao.com."]
 #bool
 mysql_enable = false
 #string
 server_log = "./httpdispatcher.server.log"
-query_log = "./httpdispatcher.query.log"
-httpd_log = "./httpdispatcher.httpd.log"
-querylog_format = "%{time:2006-01-02T15:04:05} %{shortfile}|%{shortfunc} %{level:.4s} %{id:03x}%{message}"
+query_log  = "./httpdispatcher.query.log"
+httpd_log  = "./httpdispatcher.httpd.log"
+querylog_format  = "%{time:2006-01-02T15:04:05} %{shortfile}|%{shortfunc} %{level:.4s} %{id:03x}%{message}"
 serverlog_format = "%{time:2006-01-02T15:04:05} %{shortfile}|%{shortfunc} %{level:.4s} %{id:03x}%{message}"
 log_level = "WARNING"
 
